[project]
name = "digitallab"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "manim==0.19.1",
    "manim-studio>=0.6.9",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pypdf>=6.1.3",
    "schemdraw>=0.21",
    "sympy>=1.14.0",
    "tiny8>=0.2.0",
]
